--- a/picture-in-picture/style.css
+++ b/picture-in-picture/style.css
@@ -23,4 +23,24 @@ body {
 button {
     cursor: pointer;
     outline: none;
+    width: 120px;
+    height: 75px;
+    font-family: Ubuntu, sans-serif;
+    font-size: 25px;
+    color: white;
+    text-shadow: 0 2px 5px black;
+    background: linear-gradient(to top, #696969, #575757);
+    border: 2px solid black;
+    border-radius: 7px;
+    box-shadow: inset 0 20px 4px -19px rgba(255, 255, 255, 0.7), 0 12px 12px 0 rgba(0, 0, 0, 0.4);
+
+}
+
+button:hover {
+    background: linear-gradient(to bottom, #696969, #575757);
+}
+
+button:active {
+    transform: translateY(2px);
+    box-shadow: 0 6px 6px 0 rgba(0, 0, 0, 0.4);;
 }
